<resources>
    <string name="app_name">Sayarti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="input">Search by: brand, model, category…</string>
    <string name="in">See the whole list</string>
    <string name="remember">Save my data</string>
    <string name="checkbox">check box</string>
    <string name="mail">E-MAIL</string>
    <string name="pass">password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">866028170666491</string>



    <string name="voiture_neuves">New Cars</string>

    <string name="station_de_kiosque">Gas kiosks</string>



    <string name="my_location">My position</string>
    <string name="se_connecter">log in</string>
    <string name="cr_er_un_compte">Create an account</string>

    <string name="bornes_de_recharge">Charging stations</string>
    <string name="assurance_auto">Car Insurance</string>
    <string name="entretien">Car maintenance</string>

    <string name="profil">Profile</string>


    <string name="ecrire_votre_note">Write your note:</string>
    <string name="ajouter_une_note">Add a note</string>
    <string name="notes">Notes</string>

    <string name="entrez_votre_matricule">Enter your registration number</string>
    <string name="exp_120tun1559">exp:120Tun1559</string>
    <string name="type_de_panne">Type of tip:</string>
    <string name="decrire_votre_panne">Describe your failure</string>
    <string name="localisation">Location :</string>
    <string name="envoyer">Send</string>
    <string name="matricule">registration number</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="add_note">Add note</string>
    <string name="entrez_votre_email">Enter your e-mail:</string>
    <string name="entrez_votre_mot_de_passe">Enter your password:</string>
    <string name="confirmez_votre_mot_de_passe">Confirm your password:</string>
    <string name="connecter">Connect</string>
    <string name="name">name:</string>
    <string name="tel">Mobile:</string>
    <string name="marque">Mark:</string>
    <string name="prix">FROM </string>
    <string name="puissance_fiscale">Fiscal power</string>
    <string name="type_carburant">Fuel type</string>
    <string name="bo_te">Box</string>
    <string name="puissance_ch_din">Power (CH DIN)</string>
    <string name="transmission">Transmission</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ville">City:</string>
    <string name="deco">Sign out</string>
    <string name="profile">Profile</string>
    <string name="dt">dt</string>
    <string name="visite_technique">Technical visit</string>
    <string name="ajouter_evnt">Add event</string>
    <string name="update_mat">Enter your registration number</string>
    <string name="update_note">Enter the note</string>
    <string name="loading">Loading cars</string>
    <string name="Choisissez_le_type_de_panne">Choose the type of tip</string>
    <string name="Batterie">battery</string>
    <string name="Pneumatique">Pneumatic</string>
    <string name="Essence">Fuel</string>
    <string name="Accident">Accident</string>
    <string name="Incendie">Fire</string>
    <string name="Autre">Other</string>
    <string name="_216" translatable="false">+216</string>
    <string name="_00000000">00000000</string>
    <string name="internetTitle">Vérifier votre connexion internet</string>
    <string name="internetMsg">Pas de connexion d\'internet voulez-vous poursuivre .</string>

</resources>