<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="350dp"
            android:padding="4dp"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/nomVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_carburant"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />
            <TextView
                android:id="@+id/type_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"

                android:layout_marginStart="5dp" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puissance_fiscale"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/PuissanceF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puissance_ch_din"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/puissance_ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bo_te"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/Boite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transmission"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/Trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout></LinearLayout>
</LinearLayout>