<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:background="@mipmap/route_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            card_view:cardBackgroundColor="@color/black">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:padding="20dp"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardBackgroundColor="@color/trans">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/entrez_votre_email"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:inputType="textEmailAddress"
                            android:id="@+id/signUpMail"
                            android:padding="12dp"
                            android:background="@drawable/custom_input"
                            android:autofillHints=""
                            tools:ignore="LabelFor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="100dp"
                        android:padding="15dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/entrez_votre_mot_de_passe"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:id="@+id/signUpMDP1"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:background="@drawable/custom_input"
                            android:autofillHints=""
                            tools:ignore="LabelFor" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="200dp"
                        android:padding="15dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmez_votre_mot_de_passe"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:id="@+id/signUpMDP2"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:background="@drawable/custom_input"
                            android:autofillHints=""
                            tools:ignore="LabelFor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="300dp"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <Button
                            android:id="@+id/SignUpbtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardview_dark_background"
                            android:text="@string/connecter" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </LinearLayout></ScrollView>
</FrameLayout>