<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/route_background"
    >
   >
<ScrollView  android:layout_width="match_parent"
android:layout_height="match_parent"
  >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >


        <!-- ___________________LOGO______________________-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            >
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/black">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/todo" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    <!--______________________Recherche__________________-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/trans">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="12dp"
                    android:hint="@string/input"
                    android:layout_gravity="center"
                    android:id="@+id/inp"
                    android:background="@drawable/custom_input"
                    android:inputType="text"
                    android:autofillHints="" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:id="@+id/rech"
                    android:background="@drawable/custom_button"
                    android:text="@string/in"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recylcerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <TextView
                    android:layout_marginVertical="500dp"
                    android:id="@+id/err"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>





    </LinearLayout>


</LinearLayout>

</ScrollView></RelativeLayout>